--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@evervault/sdk": "^1.1.5"
   },
-  "name": "evervault-experiment",
+  "name": "evervault-experiment-enctool",
   "version": "1.0.0",
   "main": "src/index.js",
   "license": "MIT",
